# linkedin-job-alerts

./: README.md  deploy.sh  export_requirements.sh  main.py  pyproject.toml  requirements.txt
deploy/: cloudfunction.sh  cloudscheduler.sh
