[project]
name = "linkedin-job-alerts"
version = "0.1.0"
description = ""
authors = [
    {name = "VitaminB16",email = "artemiy.nosov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gcp-pal[bigquery,firestore] (>=1.0.41,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
